fix Login alignment

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -4,7 +4,9 @@
 * {
 	box-sizing: border-box;
 }
-
+html {
+	height: 100%;
+}
 body {
 	display: flex;
 	justify-content: center;
@@ -12,6 +14,7 @@ body {
 	background-color: lavendar;
 	font-family: 'Elice Digital Baeum', sans-serif;
 	overflow: hidden;
+	height: 100%;
 }
 h1 {
 	font-size: 2rem;
